--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Flyway
@@ -29,5 +29,35 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger
 management.endpoints.web.exposure.include=health,info,prometheus
 
-# Logging
-logging.level.org.springframework.security=DEBUG
+############################################
+# LOGGING CONFIGURATION
+############################################
+
+# Root logging level (default for everything)
+logging.level.root=INFO
+
+# Spring framework logs (reduce noise)
+logging.level.org.springframework=INFO
+logging.level.org.springframework.web=INFO
+
+# Hibernate logs (quiet)
+logging.level.org.hibernate=INFO
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=OFF
+
+# Your application logs
+logging.level.webshop.backend=DEBUG
+
+# Log file output
+logging.file.name=logs/webshop.log
+logging.file.path=./logs
+
+# Log pattern (console and file)
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Max file size and rolling policy
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=10
+logging.logback.rollingpolicy.total-size-cap=1GB
+
